# liquid-ai-vision-kit

./: .clang-format  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ADVANCED_RESEARCH_PUBLICATION.md  BREAKTHROUGH_RESEARCH_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  Dockerfile  Doxyfile  Makefile  PERFORMANCE_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_PUBLICATION_REPORT.md  SECURITY.md  TERRAGON_AUTONOMOUS_EXECUTION_COMPLETE.md  TERRAGON_AUTONOMOUS_EXECUTION_FINAL_REPORT_v4.md  TERRAGON_SDLC_COMPLETION_REPORT_FINAL.md  TERRAGON_SDLC_FINAL_AUTONOMOUS_EXECUTION_REPORT.md  TERRAGON_SDLC_FINAL_COMPLETION_REPORT.md  TERRAGON_SDLC_FINAL_REPORT.md  adaptive_learning_research.json  breakthrough_research_results.json  build_and_validate.py  demo.py  demo_basic_functionality.py  demo_integrated_system.py  demo_robust_system.py  demo_scaled_system.py  demo_system_architecture.py  docker-compose.yml  next_gen_optimization_results.json  (+13 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: project-metrics.json
cmake/: liquid_vision_config.cmake.in
docs/: README.md  ROADMAP.md
docs/adr/: 0001-adr-template.md  0002-liquid-network-fixed-point-arithmetic.md
docs/architecture/: ARCHITECTURE.md  DEVELOPMENT.md
docs/deployment/: monitoring.md
docs/guides/: README.md
docs/workflows/: ci-cd-setup.md  release-process.md
include/liquid_vision/: lnn_controller.hpp
include/liquid_vision/control/: flight_controller.h
include/liquid_vision/core/: liquid_network.h  liquid_neuron.h  ode_solver.h
include/liquid_vision/deployment/: multi_region.h
include/liquid_vision/i18n/: localization.h
include/liquid_vision/optimization/: performance_optimizer.h
include/liquid_vision/utils/: error_handling.h  fixed_point.h  logger.h  math_utils.h
include/liquid_vision/vision/: feature_extractor.h  image_processor.h
liquid_ai_vision_kit/: __init__.py  liquid_vision_cell.py  liquid_vision_classifier.py  patch_embedder.py
models/: quantum_scheduler_lnn.json
src/: final_validation.cpp  generation1_demo.cpp  lnn_controller.cpp  lnn_controller_old.cpp  main.cpp  main_demo.cpp  performance_demo.cpp  quality_gates.cpp  robust_demo.cpp  scaled_demo.cpp  scaled_simple.cpp  simple_demo.cpp
src/benchmark/: main.cpp  performance_tests.cpp
src/control/: flight_controller.cpp  flight_controller.h
src/core/: liquid_network.cpp  liquid_neuron.cpp  ode_solver.cpp
src/database/: connection.cpp  connection.h  schema.sql
src/i18n/: localization.cpp
src/python/: liquid_vision.py
src/quantum_task_planner/: __init__.py  integration_bridge.py
src/quantum_task_planner/core/: lnn_integration.py  quantum_engine.py  task_scheduler.py
src/quantum_task_planner/deployment/: global_orchestrator.py
src/quantum_task_planner/monitoring/: comprehensive_monitor.py  health_monitor.py
src/quantum_task_planner/performance/: cache_manager.py
src/quantum_task_planner/reliability/: error_recovery.py
src/quantum_task_planner/resilience/: fault_tolerance.py
src/quantum_task_planner/scaling/: auto_scaler.py  performance_optimizer.py
src/quantum_task_planner/security/: audit_logger.py
src/quantum_task_planner/validation/: task_validator.py
src/reliability/: error_recovery_system.cpp
src/repositories/: model_repository.cpp  model_repository.h
src/research/: adaptive_neural_dynamics.py  breakthrough_benchmarking.py  breakthrough_neural_dynamics.py  next_gen_optimization.py  quantum_inspired_task_planning.py  realtime_adaptive_learning.py
src/simulation/: main.cpp  simulator.cpp
src/utils/: error_handling.cpp  fixed_point.cpp  fixed_point.h  logger.cpp  math_utils.cpp
src/vision/: feature_extractor.cpp  image_processor.cpp  image_processor.h
tests/: CMakeLists.txt  test_fixed_point.cpp  test_image_processor.cpp  test_image_processor_fixed.cpp  test_liquid_ai_vision.py  test_liquid_neuron.cpp  test_ode_solver.cpp
tests/fixtures/: test_config.h.in
tests/framework/: simple_test.cpp  simple_test.h
tests/integration/: final_system_validation.py  quick_validation.py  test_full_system.py
tests/mocks/: mock_hardware.cpp  mock_hardware.h
tests/performance/: test_inference_performance.cpp
tests/python/: conftest.py  test_quantum_engine.py
tests/python/performance/: test_benchmarks.py
tests/unit/: test_fixed_point.cpp
tests/utils/: test_helpers.cpp  test_helpers.h
